fix: button height on mobile

--- a/src/components/Increment/Increment.scss
+++ b/src/components/Increment/Increment.scss
@@ -12,7 +12,7 @@
   .select-container {
     position: relative;
     min-width: 40px;
-    height: 40px;
+    height: 36px;
 
     select {
       position: absolute;
@@ -23,7 +23,6 @@
     > span {
       margin: 0;
       padding: 0;
-      line-height: 1;
       min-width: 40px;
       line-height: 40px;
       text-align: center;
